--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "a social contact demo write by angularjs and react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "",
+    "webpack:dll": "npx webpack --config build/webpack.dll.js",
+    "start": "npx webpack-dev-server --config ./build/webpack.local.js --progress --open",
+    "server": "nodemon ./node_modules/.bin/babel-node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,10 +26,26 @@
   },
   "homepage": "https://github.com/flawless95/LL-angularjs#readme",
   "dependencies": {
-    "angular": "1.5.8"
+    "@babel/preset-env": "^7.2.3",
+    "angular": "1.5.8",
+    "angular-ui-router": "^1.0.20",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "express": "^4.16.4",
+    "handlebars": "^4.0.12",
+    "lodash": "^4.17.11",
+    "react": "^16.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
     "babel-loader": "^8.0.4",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "llb-react": "^1.0.0",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2",
